@@ -2,6 +2,7 @@ FreeRADIUS 3.0.21 Thu 14 Nov 2019 12:00:00 EDT urgency=low
 	Feature improvements
 
 	Bug fixes
+	* Increase the 'nasportid' SQL field for 'varchar(32)'. #3141
 
 FreeRADIUS 3.0.20 Thu 14 Nov 2019 12:00:00 EDT urgency=medium
 	Feature improvements
